--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/俊翔-任-a484751b1/"
+  linkedin         : "俊翔-任-a484751b1"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
