--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,8 @@ author:
   bio              : "Undergraduate at Tsinghua University"
   location         : "Haidian,Beijing"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  email            : "rjx19@mails.tsinghua.edu.cn"
   uri              :
   bitbucket        :
   codepen          :
@@ -100,13 +98,11 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "俊翔-任-a484751b1"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
   twitter          : "replacethistwitterhandle"
